--- a/style.css
+++ b/style.css
@@ -10,27 +10,37 @@ body {
   position: absolute;
   top: 5vh;
   left: 5vw;
-  width: 40vw;
+  width: 50vw;
   height: 90vh;
-  background: lightseagreen;
+  background: lightgray;
 }
 
 #header {
   position: absolute;
   top: 5vh;
-  left: 55vw;
-  width: 40vw;
+  left: 60vw;
+  width: 35vw;
   height: 10vh;
-  background: peru;
+  /*background: red;*/
 }
 
 #content {
   position: absolute;
   top: 20vh;
-  left: 55vw;
-  width: 40vw;
+  left: 60vw;
+  width: 35vw;
   height: 75vh;
-  /* background: blue; */
+  /*background: lightblue;*/
+}
+
+#name-box{
+  font-size: 20px;
+  width: 60%;
+}
+
+#date-box{
+  font-size: 20px;
+  width: 60%;
 }
 
 #calendar-title {
@@ -41,10 +51,28 @@ body {
   font-size: 45px;
 }
 
+#todotitle{
+  position: absolute;
+  height: 100%;
+  width: 80%;
+  
+  padding: 5px;
+  font-size: 45px;
+}
+
+#add-btn {
+  position: absolute;
+  height: 100%;
+  width: 20%;
+  right: 0%;
+  padding: 5px;
+  font-size: 45px;
+}
+
 #calendar-day {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  background: #ddd;
+  background: lightgray;
 }
 #calendar-day > div {
   background: lightblue;
@@ -63,14 +91,14 @@ body {
 
 #calendar-grid {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(7, minmax(0, 1fr));
   background: #ddd;
 }
 #calendar-grid > div {
   background: white;
   margin: 5px;
   padding: 5px;
-  height: 10vh;
+  height: 12vh;
   text-align: right;
   border-radius: 10px;
 }
@@ -80,4 +108,14 @@ body {
 }
 #calendar-grid > div.that-month {
   color: gray;
+}
+
+.task-box {
+  padding-left: 2px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 12px;
+  border-radius: 4px;
+  background-color: lightblue;
 }
